--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" href="#about">About</a>
+                  <a class="nav-link" href="#about">About Me</a>
                   <a class="nav-link" href="#experience">Experience</a>
                   <a class="nav-link" href="#projects">Projects</a>
                   <a class="nav-link" href="#contacto" >Contact</a>
@@ -48,7 +48,7 @@
             <article>
                 <img data-aos="zoom-in" src="./assets/images/main/12976874_10201918732527166_2544714124482054002_o.jpg" alt="Angello Giovanni Prince Clausner" class="img-fluid">
             </article>
-            <video muted autoplay loop>
+            <video class="introvideo" muted autoplay loop>
                 <source src="./assets/video/Blurred Video of Scripts Being Typed.mp4" type="video/mp4">
             </video>  
             <div class="capa"></div>
@@ -67,20 +67,23 @@
         <h2 data-aos="flip-left" data-aos="fade-right" id="experience">
             MI EXPERIENCIA
         </h2>
-        <section data-aos="flip-left" id="s_experience">
-            <img src="./assets/images/experience/logos/htjscs.png" alt="">
-            <img src="./assets/images/experience/logos/angularjs.png" alt="">
-            <img src="./assets/images/experience/logos/bootstrap.png" alt="">
-            <img src="./assets/images/experience/logos/ceo.png" alt="">
-            <img src="./assets/images/experience/logos/figma.png" alt="">
-            <img src="./assets/images/experience/logos/github.png" alt="">
-            <img src="./assets/images/experience/logos/jquery.png" alt="">
-            <img src="./assets/images/experience/logos/nodejs.png" alt="">
-            <img src="./assets/images/experience/logos/PHP-logo.svg.png" alt="">
-            <img src="./assets/images/experience/logos/Python-logo-notext.svg.png" alt="">
-            <img src="./assets/images/experience/logos/reactjs.png" alt="">
-            <img src="./assets/images/experience/logos/sass.png" alt="">
-            <img src="./assets/images/experience/logos/uiux.png" alt="">
+        <section data-aos="fade-right" id="s_experience">
+            <img id="html-css-js" src="./assets/images/experience/logos/htjscs.png" alt="html css js">
+            <img id="angularjs" src="./assets/images/experience/logos/angularjs.png" alt="angularjs">
+            <img id="bootstrap" src="./assets/images/experience/logos/bootstrap.png" alt="bootstrap">
+            <img id="ceo" src="./assets/images/experience/logos/ceo.png" alt="ceo">
+            <img id="figma" src="./assets/images/experience/logos/figma.png" alt="figma">
+            <img id="github" src="./assets/images/experience/logos/github.png" alt="github">
+            <img id="jquery" src="./assets/images/experience/logos/jquery.png" alt="jquery">
+            <img id="nodejs" src="./assets/images/experience/logos/nodejs.png" alt="nodejs">
+            <img id="php" src="./assets/images/experience/logos/PHP-logo.svg.png" alt="PHP">
+            <img id="python" src="./assets/images/experience/logos/Python-logo-notext.svg.png" alt="Python">
+            <img id="reactjs" src="./assets/images/experience/logos/reactjs.png" alt="reactjs">
+            <img id="sass" src="./assets/images/experience/logos/sass.png" alt="sass">
+            <img id="uiux" src="./assets/images/experience/logos/uiux.png" alt="uiux">
+            <video class="humovideo" muted autoplay loop>
+                <source src="./assets/video/experience/humo.mp4" type="video/mp4">
+            </video>  
         </section>
 
 <!-- PROJECTS -->
