agrego nuevo estilo

--- a/index.html
+++ b/index.html
@@ -66,21 +66,39 @@
             MI EXPERIENCIA
         </h2>
         <section data-aos="fade-right" id="s_experience">
-            <img id="html-css-js" src="./assets/images/experience/logos/htjscs.png" alt="html css js">
-            <img id="angularjs" src="./assets/images/experience/logos/angularjs.png" alt="angularjs">
-            <img id="bootstrap" src="./assets/images/experience/logos/bootstrap.png" alt="bootstrap">
-            <img id="ceo" src="./assets/images/experience/logos/ceo.png" alt="ceo">
-            <img id="figma" src="./assets/images/experience/logos/figma.png" alt="figma">
-            <img id="github" src="./assets/images/experience/logos/github.png" alt="github">
-            <img id="jquery" src="./assets/images/experience/logos/jquery.png" alt="jquery">
-            <img id="nodejs" src="./assets/images/experience/logos/nodejs.png" alt="nodejs">
-            <img id="php" src="./assets/images/experience/logos/PHP-logo.svg.png" alt="PHP">
-            <img id="python" src="./assets/images/experience/logos/Python-logo-notext.svg.png" alt="Python">
-            <img id="reactjs" src="./assets/images/experience/logos/reactjs.png" alt="reactjs">
-            <img id="sass" src="./assets/images/experience/logos/sass.png" alt="sass">
-            <img id="uiux" src="./assets/images/experience/logos/uiux.png" alt="uiux">
-            <video class="humovideo" muted autoplay loop>
-                <source src="./assets/video/experience/humo.mp4" type="video/mp4">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./assets/images/experience/logos/html.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/css.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/js.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/angular.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/bootstrap.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/gitbush.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/github.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/nodejs.png" class="d-block" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/experience/logos/python.png" class="d-block" alt="...">
+                  </div>
+                </div>
+              </div>
+            <video class="humovideo" autoplay loop>
+                <source src="./assets/video/experience/teclado.mp4" type="video/mp4">
             </video>  
         </section>
 
