--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </div>
                 </div>
               </div>
-            <video class="humovideo" autoplay loop>
+            <video class="humovideo" muted autoplay loop>
                 <source src="./assets/video/experience/teclado.mp4" type="video/mp4">
             </video>  
         </section>
@@ -125,12 +125,36 @@
     </main>
     <footer>
         <div>
-            <p id="p_footer"></p>
-            <p id="p_footer"></p>
+            <p id="p_footer">Copyright © Angello Prince 2022</p>
+            <a href="#about">Sobre mi</a>
+            <a href="#experience">Mi experiencia</a>
+            <a href="https://github.com/AngelloPrince">Mis proyectos</a>
         </div>
         <section id="s_section">
-
+            <h3>
+              Redes Sociales
+            </h3>
+            <a href="https://www.facebook.com/AngeloPrinceClausner/">
+              <img src="./assets/images/footer/redes/facebook.png" alt="">
+            </a>
+            <a href="https://www.instagram.com/angelloprince/">
+              <img src="./assets/images/footer/redes/instagram.png" alt="">
+            </a>
+            <a href="https://www.linkedin.com/in/angello-prince-clausner-200556252/">
+              <img src="./assets/images/footer/redes/linkedin.png" alt="">
+            </a>
         </section>
+        <div id="f_contacto">
+          <h3>
+            Contacto:
+          </h3>
+          <a class="wsp" href="https://wa.me/51958789149/?text=Hola,%20queremos%20contactarnos%20contigo." target="_blank">
+            <img src="./assets/images/footer/contact/whatsapp.png" alt="">
+          </a>
+          <a href="mailto:angeloprinceclausner@gmail.com">
+            <img src="./assets/images/footer/contact/logotipo-de-gmail.png" alt="">
+          </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>   
